#6 - Fixed width of blog post images on Firefox

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -18,6 +18,7 @@
   img {
     margin: 0;
     @include border-radius(5px 5px 0 0);
+    width: 100%;
   }
 
   h3 {
